--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -219,7 +219,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
     <div><p class="statement emojiBlue">Think big, start small</p></div>
     <div class="thinkBigDiv">
-      <p class="thinkBigP">Due to popular demand, I decided to go with the Emoji Bible, but maybe I bit of my code than I could chew? Our teaching assistants (TAs) said I should consider scaling back a bit.
+      <p class="thinkBigP">Due to popular demand, I decided to go with the Emoji Bible, but maybe I bit off more code than I could chew? Our teaching assistants (TAs) said I should consider scaling back a bit.
     </div>
 
 <div class="compThreatLogosDiv">
@@ -336,7 +336,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    My front-end development teacher Avand had this bad habit of saying &#34;it&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34; him saying it was easy didn&#39;t actually make it so. For my final project I was so focused on making it work I left making it look good until the end. Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This for me was a huge victory as I had finally gotten Avand to admit that something was hard. But, all this to say, that <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up, causing you to loose huge chunks of time.
+    My front-end development teacher, Avand, had this bad habit of saying: &#34;it&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34; him saying it was easy didn&#39;t actually make it so. For my final project I was so focused on making it work I left making it look good until the end. Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This for me was a huge victory as I had finally gotten Avand to admit that something was hard. But, all this to say, that <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up, causing you to loose huge chunks of time.
   </p>
 </div>
 
@@ -381,7 +381,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Time, time, time is not on your side, no its not.</b> Some of the &#34;easiest&#34; things in CSS can take hours to fix, even for seasoned developers.
+    <p><b>Time, time, time is not on your side, no it&#39;s not.</b> Some of the &#34;easiest&#34; things in CSS can take hours to fix, even for seasoned developers.
     </p>
   </div>
 </div>
@@ -445,7 +445,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    I can almost hear the collective grown of designers when they get to this part. &#34;Oh no! No actual Code!&#34; I cut this bit of code out of my Emoji-Libs site to demontstrate how I understand that computers think. Designed by matheteticians, computers &#34;think&#34; in a way that is not very obvious to most of us. There is a commons phrase among coders &#34;computer are stupid, but never wrong.&#34; This is to say that you have to tell them  what you want in explicit detail in a lanaguage that only they understand to get the output you want.
+    I can almost hear the collective grown of designers when they get to this part. &#34;Oh no! No actual Code!&#34; I cut this bit of code out of my Emoji-Libs site to demontstrate how I understand that computers think. Designed by mathematicians, computers &#34;think&#34; in a way that is not very obvious to most of us. There is a common phrase among coders &#34;computer are stupid, but never wrong.&#34; This is to say that you have to tell them  what you want in explicit detail in a lanaguage that only they understand to get the output you want.
   </p>
 </div>
 
@@ -458,7 +458,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 1: function chooseNouns(nounEvent){</b></p>
-    <p>This is the start ot the function that allows you to choose a noun emoji from the list of options in the noun table.
+    <p>This is the start of the function that allows you to choose a noun emoji from the list of options in the noun table. The noun events is the input passed in the function (aka sausage factory)
     </p>
   </div>
 </div>
@@ -470,7 +470,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 2: var imgClicked = nounEvent.target;</b></p>
-    <p>This a variable that remembers where you clicked in in the text of the story so it knows where to place the emoji image.
+    <p>This a variable that remembers the emoji (shoe, etc.) you selected in the noun table so it can later be placed within the story text.
     </p>
   </div>
 </div>
@@ -482,7 +482,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 4:  var tableClicked = $(imgClicked).parents('table');</b></p>
-    <p>JASON HELP!!!!!
+    <p>Remembering that you are in the noun table so later you can clear the noun table.
     </p>
   </div>
 </div>
@@ -494,7 +494,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 6-14:  var clonedImg= document.createElement("img");</b></p>
-    <p>Create the new image that will be placed in the text of the story in that certain spot remebers in line 1 and with all of the attributes it should need: image, classes, the translationed text (i.e. pig emoji translates to the word &#34;piggy&#34;).</p>
+    <p>Create the new image that will be placed in the text of the story with all of the attributes it needs: image, classes, the translation text (i.e. pig emoji translates to the word &#34;piggy&#34;).</p>
   </div>
 </div>
 
@@ -516,7 +516,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 18: clickedNounEl.appendChild(clonedImg);</b></p>
-    <p>You think that may be it right? What else s there to do? No. You actually have to tell the computer to append you new emoji image to the page. You could get all the way here and think you were done, but youy woud nver see it becasue you did not tell it to append to the page. </p>
+    <p>You think that may be it right? What else is there to do? No. You actually have to tell the computer to append your new emoji image to the page. You could get all the way here and think you were done, but you would never see it because you did not tell it to append to the page.</p>
   </div>
 </div>
 
@@ -527,7 +527,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="emojiReseachText">
     <p><b>Line 20: clearTable(tableClicked);</b></p>
-    <p>Oh, and one more thing. Now you have to tell the computer to remove that table of nouns not that tyou don&#39t need it anymore.  </p>
+    <p>Oh, and one more thing. Now you have to tell the computer to remove that table of nouns now that you don&#39t need it anymore.</p>
   </div>
 </div>
 
@@ -558,15 +558,15 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
   <div class="topSwot">
     <div class="strengthWeak swotRec">
-      <p class="swotTitle">Responsive Web</p>
-      <p>- Bootstrap is helpful with nav, footer, and scroll tables but its requires a lot of work on visuals</p>
-      <p>- <b>Bootstrap&#39;s grid can help</b> with layout, but <b>often need to insert media queries to make things work</b> </p>
-      <p>- Using percentages and global margins will help to make responsive easier</p>
+      <p class="swotTitle">Responsive web</p>
+      <p>- Bootstrap is helpful with nav, footer, and scroll tables but it requires a lot of work on visuals.</p>
+      <p>- <b>Bootstrap&#39;s grid can help</b> with layout, but <b>you often need to insert media queries to make things work.</b> </p>
+      <p>- Using percentages and global margins will help to make responsive easier.</p>
     </div>
     <div class="strengthWeak  swotRec">
-      <p class="swotTitle">Break Things</p>
+      <p class="swotTitle">Break things</p>
       <p>- <b>People often do not want to change their code for fear of breaking it</b>, especially when Java Script brings your whole page to a screeching halt.</p>
-      <p>- <b>But the only way to learn is to change things</b>, break things, and then learn to fix them. (Making commits on GitHub so you can “undo” is a great practice too.) </p>
+      <p>- <b>But the only way to learn is to change things</b>, break things, and then learn to fix them. (Making commits on GitHub so you can “undo” is a great practice too).</p>
     </div>
   </div>
 
@@ -574,22 +574,21 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   <div class="strengthWeak swotRec">
     <p class="swotTitle">Code is Creative</p>
     <p>- Many people think that code is just about being a “monkey,” rote implementation of someone else’s creativity.</p>
-    <p>For this project I was in a unique position: wrote content, designed, and coded. And <b>I found that code was very creative and even inspired better design.</b> </p>
+    <p>- For this project I was in a unique position: wrote content, designed, and coded. And <b>I found that code was very creative and even inspired better design.</b> </p>
   </div>
 
-  <div class="strengthWeak  swotRec">
-    <p class="swotTitle">MVP is Good</p>
-    <p>- <b>Focus on completing a MVP first,</b> get it done</p>
-    <p>- <b>You may find that the lean UX implied by MVP also may also result in better, crisper design</b></p>
+  <div class="strengthWeak swotRec">
+    <p class="swotTitle">MVP is good</p>
+    <p>- <b>Focus on completing a MVP first,</b> get it done.</p>
+    <p>- <b>You may find that the lean UX implied by MVP may also result in better, crisper design.</b></p>
   </div>
 </div>
 
-
   <div class="bottomSwot">
-    <div class="oppThreats  swotRec">
-      <p class="swotTitle">Make it Work Before you Make it Pretty</p>
+    <div class="oppThreats swotRec">
+      <p class="swotTitle">Make it work before you Make it pretty</p>
       <p>- This phrase should probably be tattooed on the arm of any web developer or designer.</p>
-      <p>- While also true for design, in code its especially true as <b>the penalty for making it “pretty” too soon can be devastating, many hours of wasted time that might completely be lost.</b><p>
+      <p>- While also true for design, in code it&#39;s especially true as <b>the penalty for making it “pretty” too soon can be devastating, many hours of wasted time that might completely be lost.</b><p>
     </div>
     <div class="oppThreats swotRec">
       <p class="swotTitle">Always do the process</p>
@@ -601,14 +600,15 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   <div class="bottomSwot">
     <div class="oppThreats  swotRec swotRecLong">
       <p class="swotTitle">Timing is tough</p>
-      <p>- How long will that take? I can just see asking this questions as a designer/portfolio manager. And now I know the answer may not be that easy. I have learn a lot about what is hard and what is easy to do in code, but even seasoned developers are hit with unexpected issues that can drastically effect time to completion some that happened to me are:</p>
+      <p>- How long will that take? I can just see asking this questions as a designer/portfolio manager. And now I know the answer may not be that easy. I have learned a lot about what is hard and what is easy to do in code, but even seasoned developers are hit with unexpected issues that can drastically effect time to completion
+      <p>Some that happened to me are:</p>
       <p>+ The “easy CSS” problem that took 3 hours to fix.<p>
       <p>+ The problem I didn’t know I had. Hey why is your website look like X, Y, Z on my Android…</p>
       <p>+ I am just going to finish one more thing… is it 4am?</p>
     </div>
 
     <div class="oppThreats swotRec swotRecLong">
-      <p class="swotTitle">Scope Creep</p>
+      <p class="swotTitle">Scope creep</p>
       <p>- <b>Scope creep is one of the toughest things to manage in code.</b></p>
       <p>- I just need to do one more thing…</p>
       <p>- Wouldn't it be cool if…</p>
@@ -620,7 +620,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 </div>
 
-<div><p class="statement emojiBlue">The Problem &amp The Emoji-Libs Solution</p></div>
+<div><p class="statement emojiBlue">The problem &amp the Emoji-Libs solution</p></div>
 
 <div class="introBoxes row">
   <div class="introBox col-xs-6">
@@ -646,35 +646,35 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">1</p></div>
       <div class="problemText">
-        <p><b>Understand the effort, why deadlines might be missed</b><p>
+        <p><b>Understand the effort, why deadlines might be missed.</b><p>
         <p class= "problemSubText">
-          You have a better understanding of what is easier in code and what will likely take more effort
+          You have a better understanding of what is easier in code and what will likely take more effort.
         </p>
         <p class= "problemSubText">
-           Understand that anything can happen, aka that mystifying 3 hours you lost to centering
+           Understand that anything can happen, aka that mystifying 3 hours you lost to centering.
         </p>
       </div>
     </div>
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">2</p></div>
       <div class= "problemText"><p><b>Pitch in</b></p>
-      <p class= "problemSubText">In a start up environment especially it is important to be able to pitch in and do what you can to meet a deadline </p>
+      <p class= "problemSubText">- In a start-up environment especially, it is important to be able to pitch in and do what you can to meet a deadline. </p>
     <p class= "problemSubText"></p></div>
     </div>
 
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
       <div class= "problemText"><p><b>Knowledge is power</b></p>
-      <p class= "problemSubText">Sometimes I feel like dealing with engineers is like dealing with a mechanic, "don't worry about what's under the hood little missy"</p>
-      <p class= "problemSubText">When designers know code they can take back some of that power</p>
+      <p class= "problemSubText">- Sometimes I feel like dealing with engineers is like dealing with a mechanic, &#34;don't worry about what's under the hood little missy.&#34;</p>
+      <p class= "problemSubText">- When designers know code they can take back some of that power.</p>
     </div>
   </div>
 
   <div class="bullet">
     <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
     <div class= "problemText"><p><b>Code can inspire/influence design</b></p>
-    <p class= "problemSubText">No matter how perfect the design nothing renders quite the same on Sketch/Illustrator as it does on the web page, especially considering responsive web and the hundreds of different sized devices</p>
-    <p class= "problemSubText">Sometimes a coding accident or a need to modify the content to fit the code will lead to a better, cleaner design </p>
+    <p class= "problemSubText">- No matter how perfect the design nothing renders quite the same on Sketch/Illustrator as it does on the web page, especially considering responsive web and the hundreds of different sized devices</p>
+    <p class= "problemSubText">- Sometimes a coding accident or a need to modify the content to fit the code will lead to a better, cleaner design </p>
   </div>
 </div>
 
@@ -749,7 +749,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
         <div class="problemText">
           <p><b>The best design comes from multi-disciplinary teams</b><p>
           <p class= "problemSubText">
-            There seems to be so many stories of developers and designer at odds with each other, but this project made it clear why we all need to work togther as only then can we inspire each other to make the best product.
+            There seems to be so many stories of developers and designer at odds with each other, but this project made it clear why we all need to work togther, as only then can we inspire each other to make the best product.
           </p>
         </div>
       </div>
@@ -764,7 +764,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
       <div class="bullet">
         <div class="decCircle emojiPinkBack"><p class="decNumber">3</p></div>
         <div class= "problemText"><p><b>There is nothing like seeing your creation come to life</b></p>
-        <p class= "problemSubText">Even the most beautiful design is still just a flat. It &#39;s not dynamics. It doesn &#39;t having any functionality. When you build a site, with you own two hands and see it functioning it &#39;s an amazing feeling. I have been a writer, artist, and film maker and belive that, like those mediums, code is truly creative.</p>
+        <p class= "problemSubText">Even the most beautiful design is still just flat. It&#39;s not dynamic. It doesn&#39;t having any functionality. When you build a site, with you own two hands and see it functioning it&#39;s an amazing feeling. I have been a writer, artist, and film maker and belive that, like those mediums, code is truly creative.</p>
       </div>
     </div>
 
