--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -67,23 +67,23 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle emojiBlue">My Challenge</p>
-            <p class="boxText heavyText">Emoji-Libs was my final project as part of my front-end web development class. I chose to include it as part of my portfolio because it is a unique opportunity for most designers to create content, design website, and actually bring it to life with code. Of all the projects in my portfolio I think this did the most to increase my understanding of the big picture of all the roles within tech and how design can best work within them.
+            <p class="boxText heavyText">Emoji-Libs was my final project as part of my front-end web development class. It&#39;s part of my portfolio because it was unique opportunity to create content, design website, and actually bring it to life with code. Of all the projects in my portfolio I think this did the most to increase my understanding of the big picture, all the roles within tech, and how design can best work within them. This portfolio piece reviews both elements of the websites design as well as lessons learned as part of creating content and coding the site.
           </p>
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle emojiBlue">My Role</p>
             <p class="boxText heavyText">
-              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process our TAs were available to help when I got stuck and 3-5 users also helped with feedback for concept and design.
+              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process our TAs were available to help and 5+ users also helped with feedback for concept and design.
           </p>
           </div>
         </div>
         <div class="ourProcess row">
-            <p class="ourProcessTitle">Our Process</p>
+            <p class="ourProcessTitle">My Process</p>
             <div class="processCircleDiv">
               <div class="processCircle process oneLine"><a href="#strategySection"><p class="circleText">Strategy</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/emoji/intro/arrow.png">
-              <div class="processCircle process twoLine"><a href="#researchSection"><p class="circleText">Research &amp; Discovery</p></a></div>
+              <div class="processCircle process oneLine"><a href="#researchSection"><p class="circleText">Discovery</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/emoji/intro/arrow.png">
               <div class="processCircle process oneLine"><a href="#synthesisSection"><p class="circleText">Synthesis</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/emoji/intro/arrow.png">
@@ -104,7 +104,7 @@
                 <p class="experienceTitleIcon ">Dos</p>
                 <div class="iconSentence ">
                   <img class="featureIcon" alt="Hub icon" src="myimages/emoji/intro/bullet-pink.png">
-                  <p class="experienceSentence2 ">Must have Java Script </p>
+                  <p class="experienceSentence2 ">Must have JavaScript </p>
                 </div>
                 <div class="iconSentence">
                 <img class="featureIcon" alt="Hub icon" src="myimages/emoji/intro/bullet-pink.png">
@@ -170,7 +170,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
             <img class="emojiIdeaImgUsers" alt="3 people emojis" src="myimages/emoji/strategy/users.png">
           </div>
           <div class="emojiText"><p><b>Concept user research</b><p>
-            <p class= "emojiSubText">- Tested my top 3 ideas with 5 different users, ages 30-70
+            <p class= "emojiSubText">- Tested my top 3 ideas with 5+ users, ages 30-70
             </p>
             <p class= "emojiSubText">- The overwhelming favorite for all users preferred was the Emoji idea
             </p>
@@ -210,7 +210,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
             </p>
             <p class= "emojiSubText">- There are still are no sites for mad-libs with emojis
             </p>
-            <p class= "emojiSubText">- Quality, design, and functionality of the emoji-related sites that were available was poor
+            <p class= "emojiSubText">- Quality, design, and functionality of the emoji-related sites available were poor
             </p>
           </div>
         </div>
@@ -219,15 +219,18 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
     <div><p class="statement emojiBlue">Think big, start small</p></div>
     <div class="thinkBigDiv">
-      <p class="thinkBigP">Due to popular demand, I decided to go with the Emoji Bible, but maybe I bit off more code than I could chew? Our teaching assistants (TAs) said I should consider scaling back a bit.
+      <p class="thinkBigP">Due to demand, chose Emoji Bible, but did I <b>bite off more code than I could chew?</b> Our TAs said to cut back a bit.
     </div>
 
-<div class="compThreatLogosDiv">
-  <div class="">
+<div class="bibAndLib">
+    <img class="bibAndLibImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/emoji-bib-lib.png">
+</div>
+
+
+<!-- <div class="">
 <p class="statement emojiPink">Emoji Bible</p>
 
       <div class="compThreatLogosText">
-        <!-- compThreatLogoTitle  -->
         <p class="compThreatLogoSubTitle">Offered essentially three multi-level, fully-functional websites:</p>
         <p class="compThreatLogoText">- Emoji-Libs/translator (a Mad Libs for emojis)</p>
         <p class="compThreatLogoText">- Express your feelings with Emojis</p>
@@ -258,8 +261,8 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
     <p class="statement emojiBlue">Emoji-Libs</p>
         <div class="compThreatLogosText compThreatLogosTextEmojiLibs">
           <p class="compThreatLogoSubTitle">Offered one fully-functional website with three stories:</p>
-          <p class="compThreatLogoText">- Dynamic site, uses multiple types of Java Script functions</p>
-          <p class="compThreatLogoText">- Java Script and CSS animations </p>
+          <p class="compThreatLogoText">- Dynamic site, uses multiple types of JavaScript functions</p>
+          <p class="compThreatLogoText">- JavaScript and CSS animations </p>
         </div>
 
         <div class="compThreatLogos">
@@ -267,7 +270,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
         </div>
 
     </div>
-</div>
+</div> -->
 
 <div><p class="statement emojiPink">Where to start: the plan</p></div>
 
@@ -315,14 +318,14 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 </div>
 
-<div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
+<div class="processSectionTitle" id="researchSection">Discovery</div>
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    They said code is akin to language. I speak 2.25 languages and have taught language and I would say that analogy holds up, to a point. Having no prior coding experience, with this class what was for sure was that I was learning a new paradigm - a new way to way to think, work, and communicate with my computer.
+    They say code is akin to language. I speak 2.25 languages andhave taught language. I would say that analogy holds up, to a point. Having no prior coding experience, with this class what was for sure was that I was learning a new paradigm - a new way to way to think, work, and communicate with my computer.
   </p>
 </div>
 
-<div><p class="statement emojiPink">HTML a skeleton made of tupperware</p></div>
+<div><p class="statement emojiPink">HTML: a skeleton made of tupperware</p></div>
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
@@ -336,7 +339,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    My front-end development teacher, Avand, had this bad habit of saying: &#34;it&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34; him saying it was easy didn&#39;t actually make it so. For my final project I was so focused on making it work I left making it look good until the end. Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This for me was a huge victory as I had finally gotten Avand to admit that something was hard. But, all this to say, that <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up, causing you to loose huge chunks of time.
+    My front-end development teacher, Avand, had this bad habit of saying: &#34;that&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34; him saying it didn&#39;t actually make it so. For my final project I was so focused on making it work I left making it look good until the end. Then Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This for me was a huge victory as I had finally gotten Avand to admit that something was hard. But, all this to say, that <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up, causing you to loose huge chunks of time.
   </p>
 </div>
 
@@ -350,7 +353,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>CSS is much more than a pretty face.</b> CSS now does so much more than just add color and styling. Many people prefer even CSS over java script for animations.</p>
+    <p><b>CSS is much more than a pretty face.</b> CSS does so much more than just add color and styling. Many people prefer even CSS over JavaScript for animations.</p>
   </div>
 </div>
 
@@ -370,7 +373,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>CSS may never give you why or where.</b> With some languages, like Java Script will tell you exactly where the error is and maybe even a bit about why its not working. But with CSS you are mostly on your own. Good luck.
+    <p><b>CSS may never give you why or where.</b> With some languages, like JavaScript will tell you exactly where the error is and maybe even a bit about why its not working. But with CSS you are mostly on your own. Good luck.
  </p>
   </div>
 </div>
@@ -386,17 +389,17 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 </div>
 
-<div><p class="statement emojiPink">Java Script is harder</p></div>
+<div><p class="statement emojiPink">JavaScript is harder</p></div>
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    <b>And what&#39;s even worse, the analogies.</b> Somehow visualizing variables as a &#34;bucket&#34; and a function as a &#34;sausage factory&#34; - is supposed to help you to understand inherently difficult concepts. It doesn&#39;t.
+    <b>And what&#39;s even worse, the analogies.</b> Somehow visualizing variables as a &#34;bucket&#34; and functions as a &#34;sausage factory&#34; - is supposed to help you to understand inherently difficult concepts. It doesn&#39;t.
   </p>
 </div>
 
 <img class="sausage researchpics" alt="Sausage" src="myimages/emoji/research/sausage.jpg">
 <!--
-<p class="emojiResearchBullet">Key items to note about Java Script:</p> -->
+<p class="emojiResearchBullet">Key items to note about JavaScript:</p> -->
 
 <div class="emojiResearchBulletDiv">
   <div class="emojiResearchDiv">
@@ -404,7 +407,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Everything shuts down.</b> Unlike CSS/HTML when Java Script is not working every bit of your code just stops working, even parts that have nothing to do with the error. Good times. Good times.
+    <p><b>Everything shuts down.</b> Unlike CSS/HTML when JavaScript is not working every bit of your code just stops working, even parts that have nothing to do with the error. Good times. Good times.
     </p>
   </div>
 </div>
@@ -415,7 +418,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Gives you a clue about the where if not also the why (sort of).</b> Java Script tells you the exact place where the error starts, the actual line. It also gives you a bit of information about what caused the error although it&#39;s usually in computer speak like: something is &#34;null,&#34; &#34;undefined is not a function,&#34; or &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
+    <p><b>Gives you a clue about the where if not also the why (sort of).</b> JavaScript tells you the exact place where the error starts, the actual line. It also gives you a bit of information about what caused the error although it&#39;s usually in computer speak like: something is &#34;null,&#34; &#34;undefined is not a function,&#34; or &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
  </p>
   </div>
 </div>
@@ -426,7 +429,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Java Script is a very powerful tool.</b> It was not lost on me that almost anything you want to do in front-end web development can be done in Java Script.
+    <p><b>JavaScript is a very powerful tool.</b> It was not lost on me that almost anything you want to do in front-end web development can be done in JavaScript.
  </p>
   </div>
 </div>
@@ -435,7 +438,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    <b>My new paradigm.</b> I recently attended a Ruby pairing workshop. I had exactly zero experience in Ruby or any other back-end code for that matter. I asked my pair what was the difference between Ruby and Ruby on Rails. I will paraphrase his answer in the style of the SAT: Ruby is to Rails as Java Script is to jQuery. I had no experience with Ruby, but understood him completely. I know I have just cracked the surface, but any code learning going forward should be much easier for me given my new paradigm.
+    <b>My new paradigm.</b> I recently attended a Ruby pairing workshop. I had exactly zero experience in Ruby or any other back-end code for that matter. I asked my pair what was the difference between Ruby and Ruby on Rails. I will paraphrase his answer in the style of the SAT: Ruby is to Rails as JavaScript is to jQuery. I had no experience with Ruby, but understood him completely. I know I have just cracked the surface, but any code learning going forward should be much easier for me given my new paradigm.
   </p>
 </div>
 
@@ -565,7 +568,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
     </div>
     <div class="strengthWeak  swotRec">
       <p class="swotTitle">Break things</p>
-      <p>- <b>People often do not want to change their code for fear of breaking it</b>, especially when Java Script brings your whole page to a screeching halt.</p>
+      <p>- <b>People often do not want to change their code for fear of breaking it</b>, especially when JavaScript brings your whole page to a screeching halt.</p>
       <p>- <b>But the only way to learn is to change things</b>, break things, and then learn to fix them. (Making commits on GitHub so you can “undo” is a great practice too).</p>
     </div>
   </div>
@@ -680,7 +683,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 </div>
 
-<div><p class="statement emojiBlue">User Research</p></div>
+<div><p class="statement emojiBlue">Useability Testing</p></div>
 
 <div class="squareRec">
 
@@ -707,7 +710,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
     <div class= "square heavyText ">
       <!-- <p class="interviewTitle emojiPink">Retired Teacher</p> -->
-      <p class="interviewQuotes">User&#39;s mentioned that they might want to change their choice of emojis after they made a selection. I <b>modified my Java Script so they could make more than one choice.</b>
+      <p class="interviewQuotes">User&#39;s mentioned that they might want to change their choice of emojis after they made a selection. I <b>modified my JavaScript so they could make more than one choice.</b>
       </p>
     </div>
 
@@ -741,7 +744,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
     <img class="tricks" alt="Tricks of the Trade" src="myimages/emoji/build/tricks.png">
 
-  <div><p class="statement emojiBlue">Reflections</p></div>
+  <div><p class="statement emojiBlue">Reflections, aka the Zen of Code</p></div>
 
   <div class="problem">
       <div class="bullet">
